# claw-egg

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/frontend/src/: App.tsx  index.css  types.ts
apps/desktop/frontend/src/components/: AddServerDialog.tsx  CloseConfirmDialog.tsx  CommunityTab.tsx  EnvironmentSelector.tsx  InstallWizard.tsx  InstallerLayer.tsx  MainLayer.tsx  ManageTab.tsx  MarketplaceTab.tsx  SettingsDialog.tsx
apps/desktop/frontend/src/utils/: settings.ts  tray.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: config.rs  env.rs  environment.rs  install.rs  mod.rs  settings.rs  tray.rs
apps/images/: generate_rounded_icon.py
crates/installer/: Cargo.toml
crates/installer/src/: config.rs  detector.rs  downloader.rs  lib.rs  orchestrator.rs  paths.rs  script_installer.rs  settings.rs  ssh_runner.rs  types.rs
crates/installer/src/installer/: cmake.rs  mod.rs  node.rs  openclaw.rs
scripts/: README.md  clear-cache.bat  generate-icons.py
website/: package-lock.json  package.json
website/scripts/: build.sh  deploy-vercel.sh  dev.sh
website/src/app/: layout.tsx  page.tsx  template.tsx
website/src/app/download/: page.tsx
website/src/app/forum/: page.tsx
website/src/app/login/: page.tsx
website/src/app/skills/: page.tsx
website/src/components/: CTASection.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  PlatformDownloadDialog.tsx  ThemeProvider.tsx
website/src/lib/: supabase.ts
website/src/types/: index.ts
website/supabase/: schema.sql
