[package]
name = "claw-egg-installer"
version = "0.1.0"
edition = "2021"
description = "Core installer library for OpenClaw"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "time", "io-util"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
base64 = "0.22"
anyhow = "1"
thiserror = "1"
log = "0.4"
# dirs = "5.0.0"
which = "5"
chrono = { version = "0.4", features = ["serde"] }
# tempfile = "3"
# zip = "=1.1.4"
# tar = "0.4"
# flate2 = "1"
# walkdir = "2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
