[package]
name = "claw-egg"
version = "0.1.0"
edition = "2021"
description = "ClawEgg - OpenClaw One-Click Installer"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"

# Workspace crates
claw-egg-installer = { path = "../../../crates/installer" }
