[package]
name = "claw-egg"
version = "0.1.0"
edition = "2021"
description = "龙虾孵化器 - OpenClaw 一键安装器"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

# Workspace crates
claw-egg-installer = { path = "../../../crates/installer" }
